# transcriber

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  ruff.toml
backend/app/: auth.py  config.py  db.py  jobs.py  main.py  memory.py  storage.py  workers.py
backend/app/providers/: base.py  local.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_health.py  test_jobs_api.py  test_memory.py  test_pipeline.py  test_providers_local.py  test_retention.py  test_storage.py  test_worker.py
docs/superpowers/plans/: 2026-04-23-transcribe-cloud.md
docs/superpowers/specs/: 2026-04-23-transcribe-cloud-design.md
web/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: Dropzone.test.tsx  Dropzone.tsx
web/src/pages/: Home.tsx  JobDetail.tsx  Jobs.tsx  Login.tsx
