[project]
name = "transcribe-cloud-backend"
version = "0.1.0"
description = "Cloud-hosted wrapper around audiotap + whisperbatch"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "aiosqlite>=0.20",
  "authlib>=1.3",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "pyjwt[crypto]>=2.9",
  "python-multipart>=0.0.12",
  "psutil>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "respx>=0.21",
  "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]
